# sp1-tee-prover

./: .gitmodules  Cargo.toml  README.md
contracts/: remappings.txt
contracts/broadcast/MultiProofManager.s.sol/1398243/: setTEEProverRegistry-latest.json
contracts/broadcast/TEEProverRegistryManager.s.sol/1398243/: run-1735207169.json
contracts/script/: MultiProofManager.s.sol  TEEProverRegistryManager.s.sol
contracts/src/core/: SP1MultiProof.sol  SP1TEEProverRegistry.sol
contracts/src/interfaces/: IAttestationVerifier.sol  ISP1TEEProverRegistry.sol
