[workspace]
resolver = "2"
members = [
    "bin/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://ata.network/"
license = "Apache-2.0"

[workspace.dependencies]
alloy = { version = "0.1", features = ["full"] }
anyhow = "1.0.82"
env_logger = "0.11"
hex = "0.4.3"
http-body-util = "0.1"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4"
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["hashes", "rand", "recovery"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = "3.0.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
web3 = "0.19.0"